@@ -1,3 +1,10 @@
+2016-01-27  Andre Vehreschild  <vehre@gcc.gnu.org>
+
+	PR fortran/69268
+	* gfortran.dg/allocatable_scalar_13.f90: Fixing counts of malloc/
+	free to fit the actual number of calls.
+	* gfortran.dg/allocate_with_source_16.f90: New test.
+
 2016-01-27  Tom de Vries  <tom@codesourcery.com>
 
 	* gcc.dg/autopar/pr69110.c: Fix pass number.
